# mini-nnet

./: CMakeLists.txt  main.cc  main_classify.cc  main_regress.cc
nnet/: CMakeLists.txt  config.h  def.h  grad_check.h  nnet.h  optimizer.cc  optimizer.h
